nav: fixed overflow-x issue

--- a/src/UI/Layout/Navbar/index.scss
+++ b/src/UI/Layout/Navbar/index.scss
@@ -47,7 +47,7 @@
     &__image {
         position: relative;
         height: 8rem;
-        width: 100vw;
+        width: 100%;
         object-fit: cover;
         opacity: 0.1;
     }
