--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -5,7 +5,6 @@
     box-sizing: border-box;
     min-width: 0;
     font-size: $font_size;
-    overflow-x: hidden;
 }
 
 button,
@@ -18,8 +17,8 @@ a {
 
 /* width */
 ::-webkit-scrollbar {
-    width: 5px;
-    height: 5px;
+    width: 0.5rem;
+    height: 0.5rem;
 }
 
 /* Track */
